force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Quantity_Shipment_Initiated2__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Quantity_Shipment_Initiated2__c</fullName>
    <description>For part requests, quantity for which shipment has been initiated so far.</description>
    <inlineHelpText>For part requests, quantity for which shipment has been initiated so far.</inlineHelpText>
    <label>Qty Shipment Initiated</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>