force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Requested_Street__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Requested_Street__c</fullName>
    <description>“Street” part of the requested location</description>
    <inlineHelpText>“Street” part of the requested location</inlineHelpText>
    <label>Requested Street</label>
    <type>TextArea</type>
</CustomField>