force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/SVMXC__Service_Group__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the service group if the Log Against is set to Service Group. Is a lookup to an existing service group in ServiceMax</description>
    <inlineHelpText>Name of the service group if the Log Against is set to Service Group. Is a lookup to an existing service group in ServiceMax</inlineHelpText>
    <label>Service Team</label>
    <referenceTo>SVMXC__Service_Group__c</referenceTo>
    <relationshipName>Service_Order_Line</relationshipName>
    <type>Lookup</type>
</CustomField>