force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Total_Estimated_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Line_Price__c</fullName>
    <description>Total of the line quantity times the item price on the estimate lines</description>
    <formula>SVMXC__Estimated_Quantity2__c *  SVMXC__Estimated_Price2__c</formula>
    <label>Total Estimated Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>