force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Travel_Confirmation_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Travel_Confirmation_ERP_ID__c</fullName>
    <description>To store Travel confirmation ERP Id from SAP.</description>
    <label>Travel Confirmation ERP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>