force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Travel_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Travel_Numeric__c</fullName>
    <description>This field stores Travel hours value in numeric form. ex: 19:30 as 19.5. Created as part of DCP-33498</description>
    <formula>If(IsBlank(Travel_Time_in_hours__c),0,
			If(CONTAINS(Travel_Time_in_hours__c,&quot;:&quot;),
        VALUE(LEFT(Travel_Time_in_hours__c,Find(&quot;:&quot;, Travel_Time_in_hours__c)-1))+VALUE(RIGHT(Travel_Time_in_hours__c,(LEN(Travel_Time_in_hours__c)-Find(&quot;:&quot;, Travel_Time_in_hours__c))))/60,
        VALUE(Travel_Time_in_hours__c)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel (Numeric)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>