force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Travel_Time_in_hours__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_in_hours__c</fullName>
    <description>DCP-673 : To capture travel time for field support activities. 
To be entered manually by the engineer using the SFM transaction &apos;WO Debrief&apos;
DCP-25287: Field label updated from Travel Time (in hours) to Travel Hours (HH:MM)</description>
    <label>Travel Hours (HH:MM)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>