force-app/main/default/objects/SVMXC__Service_Order_Line__c/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <description>DCP-673 : 
Picklist to populate the Work Order type of the corresponding Work Order. This is used to define dependency on the Activity Type based on Work Order Type. 
To be used in the SFM Mapping.</description>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Activities</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Remote Support</fullName>
            </value>
            <value>
                <fullName>Depot Service</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Dedicated Onsite Activities</fullName>
            </value>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Estimates</fullName>
            </value>
            <value>
                <fullName>Clarity LIMS</fullName>
            </value>
            <value>
                <fullName>Propel</fullName>
            </value>
            <value>
                <fullName>Return Scrap Decommission</fullName>
            </value>
            <value>
                <fullName>Billable Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>