force-app/main/default/objects/SVMXC__Service_Order_Line__c/recordTypes/Related_Products.recordType-meta.xml
<RecordType>
    <fullName>Related_Products</fullName>
    <active>true</active>
    <label>Related Products</label>
</RecordType>