force-app/main/default/objects/SVMXC__Service_Order_Line__c/recordTypes/SVMXC__Estimate.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Estimate</fullName>
    <active>true</active>
    <description>Estimate of work to be performed</description>
    <label>Estimate</label>
</RecordType>