force-app/main/default/objects/SVMXC__Service_Order_Line__c/recordTypes/SVMXC__Products_Serviced.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Products_Serviced</fullName>
    <active>true</active>
    <description>Products Serviced</description>
    <label>Products Serviced</label>
</RecordType>