force-app/main/default/objects/SVMXC__Service_Order_Line__c/recordTypes/SVMXC__RequestReceipt.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__RequestReceipt</fullName>
    <active>true</active>
    <description>Part requests and receipt information</description>
    <label>Request/Receipt</label>
</RecordType>