force-app/main/default/objects/SVMXC__Service_Order_Line__c/recordTypes/SVMXC__UsageConsumption.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__UsageConsumption</fullName>
    <active>true</active>
    <description>Details of actual work peformed on the service order</description>
    <label>Usage/Consumption</label>
</RecordType>