force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CannotOpenWDFromClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotOpenWDFromClosed</fullName>
    <active>true</active>
    <description>Prevent users to change the work detail of type Parts from Closed to any other status except Canceled.</description>
    <errorConditionFormula>AND(NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
NOT($User.FirstName ==$Label.Automated_Process_User),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c), 
ISPICKVAL( SVMXC__Line_Type__c , "Parts"),
ISCHANGED( SVMXC__Line_Status__c ) ,
ISPICKVAL( PRIORVALUE( SVMXC__Line_Status__c ), &quot;Closed&quot;),
NOT(ISPICKVAL( SVMXC__Line_Status__c , &quot;Canceled&quot;)),
NOT(ISPICKVAL( SVMXC__Line_Status__c , &quot;Reversal Requested&quot;))   )</errorConditionFormula>
    <errorMessage>You can only change the status to Canceled from Closed.</errorMessage>
</ValidationRule>