force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckBatchNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckBatchNumber</fullName>
    <active>true</active>
    <description>For batched Product Stock item, Batch Number field is required</description>
    <errorConditionFormula>AND(
        NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
        NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
        NOT(TEXT(SVMXC__Line_Status__c)==$Label.Canceled),
		NOT($Profile.Name ==$Label.Integration_SAP_Service), 
		NOT($User.FirstName ==$Label.Automated_Process_User),
        SVMX_PS_VS_Consumed_Product_Stock__r.SVMXC__Product__r.Batch_Management__c,
        ISBLANK(SVMX_PS_External_ID__c),
        NOT(Integration_Status__c == $Label.Success),
		ISBLANK(Batch_Number__c) 
	)</errorConditionFormula>
    <errorMessage>Batch Number field is required for batched parts</errorMessage>
</ValidationRule>