force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckBillableReasonNone.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckBillableReasonNone</fullName>
    <active>true</active>
    <description>To check for non Billable Reason is not set to None.</description>
    <errorConditionFormula>AND(
    NOT(
    AND(
    NOT(ISBLANK(SVMX_PS_External_ID__c)),
    ISCHANGED(Integration_Status__c),
    Integration_Status__c==&apos;Success&apos;
    )),
	NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
	NOT(TEXT(SVMXC__Line_Status__c)==$Label.Canceled),
	NOT($Profile.Name ==$Label.Integration_Sales_SNAP_Profile),
    NOT($Profile.Name ==$Label.Integration_SAP_Service),
    NOT($User.FirstName ==$Label.Automated_Process_User),
    NOT($Profile.Name ==$Label.Integration_Service_SNAP_Profile),
ISCHANGED(Non_Billable_Reason__c),
TEXT(Non_Billable_Reason__c ) = &apos;&apos;,
Billable_AutoUpdated__c = false,
SVMXC__Is_Billable__c = false
)</errorConditionFormula>
    <errorMessage>Non Billable Reason cannot be blank or none.</errorMessage>
</ValidationRule>