force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckConsumedProductStockLocationMatches.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckConsumedProductStockLocationMatches</fullName>
    <active>true</active>
    <description>Check if the location of consumed product stock matches the location of the consumed from location</description>
    <errorConditionFormula>AND (
		NOT(
			OR($Profile.Name = $Label.ProfileSystemAdmin,
			$Profile.Name = $Label.Integration_Service_SNAP_Profile,
			$Profile.Name = $Label.Integration_SAP_Service,
			$User.FirstName ==$Label.Automated_Process_User)
		),
		NOT( ISBLANK(SVMXC__Consumed_From_Location__c)),
		NOT( ISBLANK(SVMX_PS_VS_Consumed_Product_Stock__c)),
		SVMXC__Consumed_From_Location__c != SVMX_PS_VS_Consumed_Product_Stock__r.SVMXC__Location__c)</errorConditionFormula>
    <errorMessage>The Location of Consumed Product Stock does not match the Consumed From Location</errorMessage>
</ValidationRule>