force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckConsumedStockSerialwithProdStock.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckConsumedStockSerialwithProdStock</fullName>
    <active>true</active>
    <description>Check if the selected Serial stock is associated with the selected Product Stock</description>
    <errorConditionFormula>AND (
		NOT(
			OR($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
			$Profile.Name = $Label.Integration_Service_SNAP_Profile,
			$Profile.Name = $Label.Integration_SAP_Service,
			$User.FirstName ==$Label.Automated_Process_User)
		),
		NOT( ISBLANK(SVMX_PS_VS_Consumed_Product_Stock__c)),
		NOT( ISBLANK( SVMX_PS_VS_Consumed_Stocked_Serial__c )),
		NOT( ISPICKVAL( SVMXC__Line_Status__c , 'Canceled')) ,
		SVMX_PS_VS_Consumed_Product_Stock__r.Product_Code__c !=   SVMX_PS_VS_Consumed_Stocked_Serial__r.Product_Code__c) </errorConditionFormula>
    <errorMessage>The Consumed Stock Serial is not associated with the Consumed Product Stock. </errorMessage>
</ValidationRule>