force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckEditPartsLineStatusClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditPartsLineStatusClosed</fullName>
    <active>true</active>
    <description>Check when the Work detail of type parts is getting closed manually.</description>
    <errorConditionFormula>AND(
        NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
        $Profile.Name !=$Label.Integration_SAP_Service,
        $User.FirstName != $Label.Automated_Process_User,
        $Profile.Name != $Label.Integration_Service_SNAP_Profile,
        TEXT(SVMXC__Line_Type__c) ==  &apos;Parts&apos;,
        TEXT(SVMXC__Line_Status__c) == $Label.WorkDetailLineStatusClosed,
        ISBLANK( SVMX_PS_VS_Consumed_Status__c ) 
        )</errorConditionFormula>
    <errorMessage>Parts Swap Lines cannot be updated to Closed manually.</errorMessage>
</ValidationRule>