force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckEditToolsWorkDescription.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditToolsWorkDescription</fullName>
    <active>true</active>
    <description>To show edit on work description when there is Next Calibration Date on Tools for Commercial and Revenue Operations user</description>
    <errorConditionFormula>AND(
NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
NOT($User.FirstName ==$Label.Automated_Process_User), 
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
$Profile.Name == $Label.Profile_Commercial_and_Revenue_Operations,
TEXT(SVMXC__Line_Type__c) == &apos;Tools&apos;,
(!(ISBLANK(Next_Calibration_Date__c))),
(ISBLANK(SVMXC__Work_Description__c) || ISNULL(SVMXC__Work_Description__c))
)</errorConditionFormula>
    <errorMessage>A Work Description comment must be provided when editing Next Calibration Date.</errorMessage>
</ValidationRule>