force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckIndirectHoursOnWFMIP.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIndirectHoursOnWFMIP</fullName>
    <active>true</active>
    <description>ONLY  log indirect hours against the Workflow Manager installed product at an account.</description>
    <errorConditionFormula>AND (
    NOT($Profile.Name ==$Label.Integration_SAP_Service),
    NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
    NOT($User.FirstName ==$Label.Automated_Process_User), 
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
    NOT(
        AND(
            NOT(ISBLANK(SVMX_PS_External_ID__c)),
            ISCHANGED(Integration_Status__c),
            Integration_Status__c==&apos;Success&apos;
        )), 
	TEXT(SVMXC__Line_Type__c) == $Label.Labor,
	BEGINS(SVMXC__Service_Order__r.Installed_Product_Serial_Number__c,&quot;WFM&quot;),
	OR(
	NOT(ISBLANK(Travel_Time_in_hours__c )),
	NOT(ISBLANK(Labor_Hours__c))
	),
	ISBLANK(Indirect_in_hours__c),
 NOT(TEXT(SVMXC__Line_Status__c) == $Label.Canceled)
)</errorConditionFormula>
    <errorMessage>Only indirect hours may be logged against Workflow Manager installed products.</errorMessage>
</ValidationRule>