force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckManualCreationOfQualityReviewWD.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckManualCreationOfQualityReviewWD</fullName>
    <active>true</active>
    <description>To allow creation of QSR Activity Type Work Detail through automation only.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
NOT($User.FirstName ==$Label.Automated_Process_User), 
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
NOT(
AND(
NOT(ISBLANK(SVMX_PS_External_ID__c)),
ISCHANGED(Integration_Status__c),
Integration_Status__c==&apos;Success&apos;
)),
OR(
ISNEW(),
ISCHANGED( RecordTypeId ),
ISCHANGED( Work_Order_Type__c ),
ISCHANGED( SVMXC__Activity_Type__c )
),
TEXT(SVMXC__Activity_Type__c) =$Label.WorkDetailActivityQSReview,
NOT( Is_Auto_Created__c )
)</errorConditionFormula>
    <errorMessage>Work Detail of Activity Type &apos;Qualification Service Review&apos; cannot be created manually.</errorMessage>
</ValidationRule>