force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckMaterialsConsumedForSerializedSpare.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckMaterialsConsumedForSerializedSpare</fullName>
    <active>true</active>
    <description>Do not allow users to debrief serialized spare parts on the materials consumed work detail lines.</description>
    <errorConditionFormula>NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c)&amp;&amp;
	NOT(TEXT(SVMXC__Line_Status__c)==$Label.Canceled)&amp;&amp;
    NOT($Profile.Name ==$Label.Integration_SAP_Service)&amp;&amp;
    NOT($User.FirstName ==$Label.Automated_Process_User)&amp;&amp;
    NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile)&amp;&amp;
    (TEXT(SVMXC__Line_Type__c) = &apos;Material Consumed&apos;) &amp;&amp;
    (TEXT(SVMXC__Product__r.Service_Product_Type__c) = &apos;Spare&apos;)&amp;&amp;
    OR(
    ISNEW(),
    DATEVALUE(SVMXC__Service_Order__r.CreatedDate) &gt; DATE(2019,09,20))</errorConditionFormula>
    <errorMessage>You cannot debrief spares on the Materials Consumed Tab. Please go to the Parts Swap Tab to debrief spare parts</errorMessage>
</ValidationRule>