force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckNonBillableReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckNonBillableReason</fullName>
    <active>true</active>
    <description>Prevents converting a work detail to non billable without a reason</description>
    <errorConditionFormula>AND( 
        NOT(
        AND(
        NOT(ISBLANK(SVMX_PS_External_ID__c)),
        ISCHANGED(Integration_Status__c),
        Integration_Status__c==&apos;Success&apos;
        )), 
        NOT(TEXT(SVMXC__Line_Status__c)==$Label.Canceled),
		NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
		NOT(TEXT(SVMXC__Line_Status__c)==$Label.Canceled),
		NOT($Profile.Name ==$Label.Integration_Sales_SNAP_Profile),
        NOT($Profile.Name ==$Label.Integration_SAP_Service),
    NOT($User.FirstName ==$Label.Automated_Process_User),
    NOT($Profile.Name ==$Label.Integration_Service_SNAP_Profile),						  
		NOT(Billable_AutoUpdated__c),	
    PRIORVALUE( SVMXC__Is_Billable__c ) = TRUE,
    SVMXC__Is_Billable__c = FALSE,
    ISBLANK( TEXT(Non_Billable_Reason__c )) 
    )</errorConditionFormula>
    <errorMessage>Please enter a reason for converting a work detail to Non Billable</errorMessage>
</ValidationRule>