force-app/main/default/objects/SVMXC__Service_Order_Line__c/validationRules/CheckQuantityOfNonSerializedProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckQuantityOfNonSerializedProduct</fullName>
    <active>true</active>
    <description>To check whether the given Line QTY is 0</description>
    <errorConditionFormula>AND(
NOT(
AND(
NOT(ISBLANK(SVMX_PS_External_ID__c)),
ISCHANGED(Integration_Status__c),
Integration_Status__c==&apos;Success&apos;
)),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($User.FirstName ==$Label.Automated_Process_User),
NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
NOT(TEXT(SVMXC__Line_Status__c)==$Label.Canceled),
TEXT(SVMX_PS_VS_Consumed_Product_Stock__r.SVMXC__Product__r.Service_Product_Type__c)==&apos;Spare&apos;, 
SVMX_PS_VS_Consumed_Product_Stock__r.SVMX_PS_VS_Product_Tracking__c  == &apos;Non-Tracked&apos;,
SVMXC__Actual_Quantity2__c ==0,
OR(ISNEW(),ISCHANGED(SVMXC__Actual_Quantity2__c))
)</errorConditionFormula>
    <errorMessage>Quantity cannot be zero. Please revise the quantity and save again</errorMessage>
</ValidationRule>